--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ header {
   left: 0px;
   box-sizing: border-box;
   width: 100vw;
-  margin: 0em 0em 0.5em 0em;
+  margin: 0em 0em 1em 0em;
   padding: 0.5em;
   border-bottom: 2px solid var(--border-color);
 }
@@ -60,21 +60,32 @@ section.hero {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap-reverse;
+  padding: 5em 0em 10em 0em;
 }
 
 div.hero-left {
-  background-color: var(--hero-left-bg);
-  flex-grow: 2;
-  padding: 0.5em;
+  padding: 0px 10%;
+  font-family: var(--secondary-font);
+  font-size: max(2em, 2.5vw);
+  font-weight: bold;
 }
 
-div.hero-right {
-  background-color: var(--hero-right-bg);
-  flex-grow: 1;
+div.hero-left .greetings p {
+  margin: 0.5em 0em;
+}
+
+div.hero-left button {
+  padding: 0.8em;
+}
+
+div.hero-left button a {
+  font-size: 2em;
+  text-decoration: none;
 }
 
 @media (orientation: portrait) {
   section.hero {
     justify-content: flex-start;
+    padding: 0em 0em 4em 0em;
   }
 }
