--- a/index.css
+++ b/index.css
@@ -11,20 +11,22 @@
   --hero-left-bg: pink;
   --hero-right-bg: lightcoral;
   --border-color: black;
+  --font-color-normal: black;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --main-bg: black;
-    --hero-bg: gray;
-    --hero-left-bg: rgb(40, 5, 104);
-    --hero-right-bg: olive;
-    --border-color: white;
-  }
+/* @media (prefers-color-scheme: dark) { */
+.darkmode {
+  --main-bg: black;
+  --hero-bg: gray;
+  --hero-left-bg: rgb(40, 5, 104);
+  --hero-right-bg: olive;
+  --border-color: white;
+  --font-color-normal: white;
 }
 
 body {
   font-family: var(--primary-font);
+  color: var(--font-color-normal);
   background: var(--main-bg);
   margin: 0px;
   padding: 0px;
@@ -36,13 +38,15 @@ h1, h2, h3, h4, h5, h6 {
 
 header {
   background-color: var(--main-bg);
+  display: flex;
+  justify-content: space-between;
   position: sticky;
   top: 0px;
   left: 0px;
   box-sizing: border-box;
   width: 100vw;
   margin: 0em 0em 1em 0em;
-  padding: 0.5em;
+  padding: 0.5em 2em;
   border-bottom: 2px solid var(--border-color);
 }
 
@@ -51,7 +55,6 @@ header > h1 {
   font-size: min(3em, 7vw);
   display: inline-block;
   margin: 0px;
-  padding: 0em 0.5em;
 }
 
 section.hero {
